--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "live-server index.html",
+    "dev": "live-server",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
